--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Retroescavadeira Case 580M | Sete Lagoas e Região</title>
   <meta name="description" content="Serviços com Retroescavadeira Case 580M em Sete Lagoas e região. Abertura e limpeza de valas, terraplanagem, escavações, carregamento e mais. Orçamento rápido no WhatsApp." />
+  <link rel="icon" type="image/png" href="Logo.png">
+
 
   <style>
     :root{
@@ -383,11 +385,7 @@
           <img id="bannerImg" src="banner2.png" alt="Retroescavadeira Case 580M - Sete Lagoas e região" />
           <div class="overlay" aria-hidden="true"></div>
 
-          <div class="corner">
-            <div class="chip">🛠️ Serviço com operador</div>
-            <div class="chip">📍 <span id="chipCity">Sete Lagoas e região</span></div>
-            <div class="chip">💬 <span id="chipPhone">(31) 99586-1562</span></div>
-          </div>
+          
         </div>
       </div>
     </section>
@@ -451,24 +449,7 @@
       <div class="shorts-wrap" id="shortsWrap"></div>
     </section>
 
-    <section id="diferenciais">
-      <h2 class="section-title">Diferenciais</h2>
 
-      <div class="grid-3">
-        <div class="feature">
-          <h3>👷 Operador experiente</h3>
-          <p>Execução segura, com cuidado no acabamento e no entorno.</p>
-        </div>
-        <div class="feature">
-          <h3>⚡ Atendimento rápido</h3>
-          <p>Resposta rápida no WhatsApp e agendamento direto.</p>
-        </div>
-        <div class="feature">
-          <h3>🔧 Máquina revisada</h3>
-          <p>Equipamento revisado para reduzir paradas e garantir eficiência.</p>
-        </div>
-      </div>
-    </section>
 
     <section id="contratacao">
       <h2 class="section-title">Formas de contratação</h2>
