--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Retroescavadeira Case 580M | Sete Lagoas e Região</title>
   <meta name="description" content="Serviços com Retroescavadeira Case 580M em Sete Lagoas e região. Abertura e limpeza de valas, terraplanagem, escavações, carregamento e mais. Orçamento rápido no WhatsApp." />
-  <link rel="icon" type="image/png" href="Logo.png">
+  <link rel="icon" href="Logo.ico">
+
 
 
   <style>
