--- a/index.html
+++ b/index.html
@@ -329,8 +329,8 @@
       brand: "DDM Locações",
       city: "Sete Lagoas e região",
       machine: "Retroescavadeira Case 580M",
-      phone: "5531995861562",
-      phonePretty: "(31) 99586-1562",
+      phone: "5531971067272",
+      phonePretty: "(31) 97106-7272",
       bannerSrc: "banner2.png"
     };
   </script>
@@ -459,7 +459,7 @@
         <div class="card pricing">
           <div class="row">
             <div class="label">⏱️ Serviço por hora</div>
-            <div class="value">Sob consulta</div>
+            <div class="value">R$ 200,00</div>
           </div>
           <div class="row">
             <div class="label">📅 Serviço por diária</div>
@@ -548,7 +548,7 @@
           </div>
           <div>
             <span>WhatsApp:</span>
-            <b style="color:var(--text)" id="footPhone">(31) 99586-1562</b>
+            <b style="color:var(--text)" id="footPhone">(31) 97106-9292</b>
           </div>
         </div>
         <div style="margin-top:10px;">
@@ -560,7 +560,7 @@
 
   <a class="whatsapp-float" id="floatWhats" href="#" target="_blank" rel="noopener" aria-label="Chamar no WhatsApp">
     <span class="wa-pill">WhatsApp</span>
-    <span id="floatPhone">(31) 99586-1562</span>
+    <span id="floatPhone">(31) 97106-7272</span>
     <span aria-hidden="true">💬</span>
   </a>
 
@@ -593,7 +593,7 @@
       `Olá! Gostaria de um orçamento para serviço com ${cfg.machine}.\n\n` +
       `📍 Local: \n` +
       `🛠️ Serviço: \n` +
-      `📅 Data/urgência: \n` +
+      `📅 Data: \n` +
       `📷 Vou enviar fotos/vídeo do local.`
     );
     const waLink = `https://wa.me/${cfg.phone}?text=${msg}`;
