--- a/index.html
+++ b/index.html
@@ -2,6 +2,17 @@
 <html lang="pt-BR">
 <head>
   <meta charset="utf-8" />
+
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-P0QM7TMCN3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-P0QM7TMCN3');
+</script>
+
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Retroescavadeira Case 580M | Sete Lagoas e Região</title>
   <meta name="description" content="Serviços com Retroescavadeira Case 580M em Sete Lagoas e região. Abertura e limpeza de valas, terraplanagem, escavações, carregamento e mais. Orçamento rápido no WhatsApp." />
